# api/openapi.yaml
@@ -27,7 +27,7 @@ x-error-responses:
             $ref: "#/components/schemas/AuthenticationErrorResponse"
   role-required-error-response: &role-required-error-response
     "403":
-      description: authentication error
+      description: forbidden error
       content:
         application/json:
           schema:
@@ -59,6 +59,8 @@ tags:
     description: API server's health operations
   - name: authentication
     description: Session operations
+  - name: users
+    description: User operations
 
 paths:
   "/ping":
@@ -84,9 +86,9 @@ paths:
     post:
       summary: Create a new session
       description: Create a new session
-      security: [ ]
       tags:
         - authentication
+      security: [ ]
       operationId: create_session
       requestBody:
         required: true
@@ -160,9 +162,68 @@ paths:
               schema:
                 $ref: "#/components/schemas/EmptyResponse"
         <<: [
+          *validation-error-response,
           *authentication-error-response,
           *not-found-error-response,
+          *timeout-error-response,
+          *server-error-response,
+        ]
+  "/users":
+    post:
+      summary: Create a user
+      description: Create a user
+      tags:
+        - users
+      security:
+        - BearerAuth: [ admin ]
+      operationId: create_user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateUserRequest"
+      responses:
+        "200":
+          description: user response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserResponse"
+        <<: [
           *validation-error-response,
+          *authentication-error-response,
+          *not-found-error-response,
+          *timeout-error-response,
+          *server-error-response,
+        ]
+  "/users/{user_uuid}/deactivate":
+    post:
+      summary: Deactivate a user
+      description: Deactivate a user
+      tags:
+        - users
+      security:
+        - BearerAuth: [ admin ]
+      operationId: deactivate_user
+      parameters:
+        - name: user_uuid
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/UUID'
+      responses:
+        "200":
+          description: user deactivated
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/EmptyResponse"
+        <<: [
+          *validation-error-response,
+          *authentication-error-response,
+          *role-required-error-response,
+          *not-found-error-response,
           *timeout-error-response,
           *server-error-response,
         ]
@@ -204,7 +265,7 @@ components:
       properties:
         username:
           type: string
-          minLength: 5
+          minLength: 1
         password:
           type: string
           example: "Su6erSecR3T"
@@ -216,6 +277,47 @@ components:
         access_token:
           type: string
           description: Short-lived token for accessing protected endpoints
+
+    CreateUserRequest:
+      type: object
+      required: 
+        - username
+        - password
+      properties:
+        username:
+          type: string
+          description: Must be unique
+          minLength: 5
+          example: username
+        password:
+          type: string
+          minLength: 8
+          example: "Su6erSecR3T"
+        is_admin:
+          type: boolean
+          default: false
+
+    UserResponse:
+      type: object
+      required: 
+        - uuid
+        - created_at
+        - username
+        - is_admin
+      properties:
+        uuid:
+          $ref: "#/components/schemas/UUID"
+        created_at:
+          type: string
+          format: date-time
+        username:
+          type: string
+          description: Must be unique
+          minLength: 5
+          example: admin
+        is_admin:
+          type: boolean
+          example: true
 
     UUID:
       type: string
